fix:hero image alignment

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
   }
   .animated{
     height: 40vh !important;
-    margin-top: 5rem;
+    margin-top: 2rem;
   }
   .navbar-brand{
     margin-top:1rem;
